Update icons calendar page

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -51,7 +51,7 @@
         <a href="https://developer.mozilla.org/en/Calendar/Calendar_Versions"
           class="flex flex-col btn-block-white m-2" target="_blank">
           <h4 class="header-section mb-0">
-            <span>{{ svg('calendar') }}</span>
+            <span>{{ svg('information') }}</span>
             <aside class="flex flex-col font-lg">
               {{ _('Compatibility Information')}}
               <small class="font-normal font-regular tracking-normal normal-case">
@@ -66,7 +66,7 @@
         <a href="https://support.mozilla.org/products/thunderbird/calendar"
           class="flex flex-col btn-block-white m-2" target="_blank">
           <h4 class="header-section mb-0">
-            <span>{{ svg('calendar') }}</span>
+            <span>{{ svg('help') }}</span>
             <aside class="flex flex-col font-lg">
               {{ _('Get Support')}}
               <small class="font-normal font-regular tracking-normal normal-case">
@@ -95,7 +95,7 @@
         <a href="https://developer.mozilla.org/en/Calendar/"
           class="flex flex-col btn-block-white m-2" target="_blank">
           <h4 class="header-section mb-0">
-            <span>{{ svg('calendar') }}</span>
+            <span>{{ svg('developer') }}</span>
             <aside class="flex flex-col font-lg">
               {{ _('Developer Tools')}}
               <small class="font-normal font-regular tracking-normal normal-case">
@@ -110,7 +110,7 @@
         <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Calendar"
           class="flex flex-col btn-block-white m-2" target="_blank">
           <h4 class="header-section mb-0">
-            <span>{{ svg('calendar') }}</span>
+            <span>{{ svg('warning') }}</span>
             <aside class="flex flex-col font-lg">
               {{ _('Bugzilla')}}
               <small class="font-normal font-regular tracking-normal normal-case">
@@ -125,7 +125,7 @@
         <a href="https://codetribute.mozilla.org/projects/calendar"
           class="flex flex-col btn-block-white m-2" target="_blank">
           <h4 class="header-section mb-0">
-            <span>{{ svg('calendar') }}</span>
+            <span>{{ svg('report') }}</span>
             <aside class="flex flex-col font-lg">
               {{ _('Bugs Ahoy!')}}
               <small class="font-normal font-regular tracking-normal normal-case">
