Add Calendar holiday page

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -78,7 +78,7 @@
       </aside>
 
       <aside class="flex flex-col w-1/3">
-        <a href="holidays/" class="flex flex-col btn-block-white m-2" target="_blank">
+        <a href="holidays/" class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('calendar') }}</span>
             <aside class="flex flex-col font-lg">
@@ -141,9 +141,3 @@
 
   {% include '_includes/site-prefooter.html' %}
 {% endblock %}
-
-{% block js %}
-  <script type="text/javascript" src="/media/js/calendar.js" charset="utf-8"></script>
-{% endblock %}
-
-
