--- a/website/index.html
+++ b/website/index.html
@@ -72,6 +72,20 @@
     <section class="flex w-full max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
       <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
+          What’s New in Thunderbird 68
+        </h4>
+        <p class="mt-0 mb-6 flex-1">
+          Our newest release, Thunderbird version 68 is now available! Let’s take a look at the features that are most noteworthy in the newest version.
+        </p>
+        <footer
+          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+          <span>Aug 28, 2019</span>
+          <span>Comments 0</span>
+        </footer>
+      </article>
+
+      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg ml-16 mr-16">
+        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           All Thunderbird bugs have been fixed!
         </h4>
         <p class="mt-0 mb-6 flex-1">
@@ -83,7 +97,7 @@
         </footer>
       </article>
 
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg ml-16 mr-16">
+      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           FOSDEM 2019 and DeltaChat
         </h4>
@@ -93,20 +107,6 @@
         <footer
           class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
           <span>Mar 7, 2019</span>
-        </footer>
-      </article>
-
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
-        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          Thunderbird in 2019
-        </h4>
-        <p class="mt-0 mb-6 flex-1">
-          Welcome to 2019! In this blog post we’ll look at what we accomplished in 2018 and look forward to what we're going to be working on this year.
-        </p>
-        <footer
-          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-          <span>Jan 2, 2019</span>
-          <span>Comments 114</span>
         </footer>
       </article>
     </section>
