--- a/website/index.html
+++ b/website/index.html
@@ -9,8 +9,6 @@
 {% block page_title %}{{ _('Software made to make email easier') }}{% endblock %}
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 
-{% block page_css %}{% endblock %}
-
 {% block header_content %}
   <section class="text-center text-white flex flex-col items-center mb-12">
     <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
@@ -45,7 +43,7 @@
       <p class="font-lg tracking-wider leading-loose mb-10 flex-1">
         {{ _('Multiple features, such as built-in Do Not Track and remote content blocking, work together to ensure your safety and privacy, so you can have peace of mind.') }}
       </p>
-      <a href="{{ url('thunderbird.features') }}" class="btn-body self-start">{{_('Know your rights')}}
+      <a href="{{ url('thunderbird.features') }}#secureprotect" class="btn-body self-start">{{_('Know your rights')}}
         <span>{{ svg('chevron-right') }}</span>
       </a>
     </aside>
@@ -57,7 +55,7 @@
       <p class="font-lg tracking-wider leading-loose mb-10 flex-1">
         {{ _('With Extensions, Personas, lightweight "skins”, and many more features you can change the look and feel of Thunderbird in an instant.') }}
       </p>
-      <a href="{{ url('thunderbird.features') }}" class="btn-body self-start">{{_('Make it personal')}}
+      <a href="{{ url('thunderbird.features') }}#customize-email" class="btn-body self-start">{{_('Make it personal')}}
         <span>{{ svg('chevron-right') }}</span>
       </a>
     </aside>
@@ -72,6 +70,20 @@
     <section class="flex w-full max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
       <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
+          What’s New in Thunderbird 68
+        </h4>
+        <p class="mt-0 mb-6 flex-1">
+          Our newest release, Thunderbird version 68 is now available! Let’s take a look at the features that are most noteworthy in the newest version.
+        </p>
+        <footer
+          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+          <span>Aug 28, 2019</span>
+          <span>Comments 0</span>
+        </footer>
+      </article>
+
+      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg ml-16 mr-16">
+        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           All Thunderbird bugs have been fixed!
         </h4>
         <p class="mt-0 mb-6 flex-1">
@@ -83,7 +95,7 @@
         </footer>
       </article>
 
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg ml-16 mr-16">
+      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           FOSDEM 2019 and DeltaChat
         </h4>
@@ -95,23 +107,9 @@
           <span>Mar 7, 2019</span>
         </footer>
       </article>
-
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
-        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          Thunderbird in 2019
-        </h4>
-        <p class="mt-0 mb-6 flex-1">
-          Welcome to 2019! In this blog post we’ll look at what we accomplished in 2018 and look forward to what we're going to be working on this year.
-        </p>
-        <footer
-          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-          <span>Jan 2, 2019</span>
-          <span>Comments 114</span>
-        </footer>
-      </article>
     </section>
 
-    <a href="{{ url('blog') }}" class="btn-body mb-10">{{_('Read the Blog')}}
+    <a href="{{ url('blog') }}" class="btn-body mb-10" target="_blank">{{_('Read the Blog')}}
       <span>{{ svg('chevron-right') }}</span>
     </a>
   </section>
@@ -216,5 +214,3 @@
     </div>
   </div>
 {% endblock %}
-
-{% block email_form %}{% endblock %}
