Icons sections updated

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -218,7 +218,7 @@
     <aside id="translation" class="flex flex-col w-1/2">
       <article class="flex flex-col w-full mb-6 pr-8">
         <h3 class="header-section">
-          <span>{{ svg('news') }}</span>
+          <span>{{ svg('dictionaries') }}</span>
           <aside class="flex flex-col">
             {{ _('Translation')}}
             <small class="font-normal font-md tracking-normal normal-case">
@@ -235,7 +235,7 @@
     <aside id="qualityassurance" class="flex flex-col w-1/2">
       <article class="flex flex-col w-full mb-6 pl-8">
         <h3 class="header-section">
-          <span>{{ svg('news') }}</span>
+          <span>{{ svg('popular') }}</span>
           <aside class="flex flex-col">
             {{ _('Quality Assurance')}}
             <small class="font-normal font-md tracking-normal normal-case">
@@ -254,7 +254,7 @@
     <section id="communication" class="flex flex-wrap max-w-6xl mx-auto">
       <aside class="flex flex-col w-full mb-10">
         <h3 class="header-section">
-          <span>{{ svg('news') }}</span>
+          <span>{{ svg('accessibility') }}</span>
           <aside class="flex flex-col">
             {{ _('Communication')}}
             <small class="font-normal font-md tracking-normal normal-case">
