--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -18,7 +18,7 @@
   <section class="mt-20 pb-20 pt-10 flex justify-between items-center pl-20 pr-20 bg-calendar">
     <aside class="flex flex-col w-full ml-16 mr-16">
       <h3 class="header-section">
-        <span>{{ svg('calendar') }}</span> {{ _('Thunderbird ESR')}}
+        <span>{{ svg('envelope') }}</span> {{ _('Thunderbird ESR')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6">
         {{ _('A community-led project that allows organizations to benefit from the speed, flexibility and security of Thunderbird while getting the support they need.') }}
