All releases page

--- a/website/thunderbird/beta/all/index.html
+++ b/website/thunderbird/beta/all/index.html
@@ -40,7 +40,7 @@
     <section class="pager-content">
       <div class="pager-page" id="builds">
         <div class="localized">
-          {{ build_table(platforms, full_builds_beta, _('Fully localized versions')) }}
+          {{ build_table(platforms, full_builds_beta) }}
         </div>
       </div> {#-- /builds --#}
     </section>
