--- a/website/thunderbird/releases/index.html
+++ b/website/thunderbird/releases/index.html
@@ -4,71 +4,80 @@
 
 {% extends "_includes/base-resp.html" %}
 
-{% block page_title %}{{ _('Mozilla Thunderbird Release Notes') }}{% endblock %}
+{% block page_title %}{{ _('Thunderbird Release Notes') }}{% endblock %}
 {% block page_desc %}{{ _('Release notes for each version of Thunderbird.') }}{% endblock %}
-{% block body_id %}thunderbird-releases-index{% endblock %}
 
-{% block page_css %}
-  <link href="/media/css/releases-index.css" rel="stylesheet" type="text/css" />
-{% endblock %}
-
-{% block breadcrumbs %}
-  <nav class="breadcrumbs">
-    <a href="{{ url('mozorg.home') }}">{{ _('Home') }}</a> >
-    <a href="{{ url('thunderbird.index') }}">{{ _('Thunderbird') }}</a> >
-    <span>{{ _('Release Notes') }}</span>
-  </nav>
+{% block header_content %}
+  <section class="text-left text-white flex flex-col items-start w-full max-w-6xl mx-auto pl-8 pr-8">
+    <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
+    <p class="font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
+      {{ _('Thunderbird release notes are specific to each version of the application. Select your version from the list below to see the release notes for it.') }}
+    </p>
+  </section>
 {% endblock %}
 
 {% block content %}
-  <div id="main-feature">
-    <h1>{{ _('Thunderbird Releases') }}</h1>
-    <p>{{ _('Thunderbird release notes are specific to each version of the application. Select your version from the list below to see the release notes for it.') }}</p>
-  </div>
 
-  <div id="main-content">
-    <ol reversed>
-      {% for int_version, versions in releases -%}
-      <li>
-        <strong>{{ get_link(int_version, versions.major) }}</strong>
-        {% if versions.minor -%}
-        <ol>
-          {% for version in versions.minor -%}
-          <li>{{ get_link(int_version, version) }}</li>
-          {% endfor -%}
-        </ol>
-        {% endif -%}
-      </li>
-      {% endfor -%}
-      <li>
-        <strong><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.1.html">0.1</a></strong>
-        <ol>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.2.html">0.2</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.3.html">0.3</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.4.html">0.4</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.5.html">0.5</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.6.html">0.6</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.7.html">0.7</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.8.html">0.8</a></li>
-          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.9.html">0.9</a></li>
-        </ol>
-      </li>
-    </ol>
-  </div>
+  <section class="mt-10 pt-10 pb-10 w-full bg-calendar">
+    <section class="flex justify-between items-center w-full max-w-6xl mx-auto mb-10">
+      <h3 class="subheader-section">{{ _('Release notes for each version of Thunderbird.') }}</h3>
+    </section>
+  </section>
+
+  <section class="pb-10 w-full bg-grey-lighter">
+    <section class="flex max-w-6xl mx-auto pl-8 pr-8">
+      <aside class="flex flex-col w-full pr-8 pl-8">
+        {% for int_version, versions in releases -%}
+          <aside class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+            <h4 class="font-2xl font-bold m-0 p-3 w-24">
+              {{ get_link(int_version, versions.major) }}
+            </h4>
+            {% if versions.minor -%}
+            <aside class="flex-1 p-3">
+              {% for version in versions.minor -%}
+                {{ get_link(int_version, version, true) }}
+              {% endfor -%}
+            </aside>
+            {% endif -%}
+          </aside>
+        {% endfor -%}
+
+        <aside class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+          <h4 class="font-2xl font-bold m-0 p-3 w-24">
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.1.html" class="inline-link text-blue-dark font-bold no-underline" target="_blank">0.1</a>
+          </h4>
+          <aside class="flex-1 p-3">
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.2.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.2</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.3.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.3</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.4.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.4</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.5.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.5</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.6.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.6</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.7.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.7</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.8.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.8</a>
+            <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.9.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release" target="_blank">0.9</a>
+          </aside>
+        </aside>
+      </aside>
+    </section>
+  </section>
+
+  {% include '_includes/site-prefooter.html' %}
+
 {% endblock %}
 
-{% macro get_link(int_version, version) %}
+{% macro get_link(int_version, version, point_release = false) %}
+  {% set class = ' btn-body btn-secondary btn-release' if point_release else '' %}
   {%- if int_version < 2 -%}
-    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/{{ version }}.html">{{ version }}</a>
+    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/{{ version }}.html" class="inline-link text-blue-dark font-bold no-underline{{ class }}" target="_blank">{{ version }}</a>
   {%- elif version == '2.0' -%}
-    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/2.0.0.0/releasenotes/">{{ version }}</a>
+    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/2.0.0.0/releasenotes/" class="inline-link text-blue-dark font-bold no-underline{{ class }}" target="_blank">{{ version }}</a>
   {%- elif version == '17.0.9' -%}
-    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/17.0.9esr/releasenotes/">{{ version }}</a>
+    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/17.0.9esr/releasenotes/" class="inline-link text-blue-dark font-bold no-underline{{ class }}" target="_blank">{{ version }}</a>
   {%- elif version == '17.0.10' -%}
-    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/17.0.10esr/releasenotes/">{{ version }}</a>
+    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/17.0.10esr/releasenotes/" class="inline-link text-blue-dark font-bold no-underline{{ class }}" target="_blank">{{ version }}</a>
   {%- elif int_version < 31 -%}
-    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/{{ version }}/releasenotes/">{{ version }}</a>
+    <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/{{ version }}/releasenotes/" class="inline-link text-blue-dark font-bold no-underline{{ class }}" target="_blank">{{ version }}</a>
   {%- else -%}
-    <a href="../../../en-US/thunderbird/{{ version }}/releasenotes/">{{ version }}</a>
+    <a href="../../../en-US/thunderbird/{{ version }}/releasenotes/" class="inline-link text-blue-dark font-bold no-underline{{ class }}">{{ version }}</a>
   {%- endif -%}
 {% endmacro %}
