--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -23,14 +23,14 @@
       <p class="font-lg tracking-wider leading-loose mb-6">
         {{ _('A community-led project that allows organizations to benefit from the speed, flexibility and security of Thunderbird while getting the support they need.') }}
       </p>
-      <p class="font-lg tracking-wider leading-loose mb-6">
-        {{ _('The Thunderbird Extended Support Releases (ESR) are <a href="{latest}" class="small-link text-blue">mainstream releases</a>, operating similarly to <a href="{firefox_esr}"            target="_blank">Mozilla Firefox ESR</a>. They are stable for approximately one year before receiving feature updates.')|f(latest=url('thunderbird.latest.all'), firefox_esr=url('firefox.organizations.faq')) }}
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('The Thunderbird Extended Support Releases (ESR) are <a href="{latest}">mainstream releases</a>, operating similarly to <a href="{firefox_esr}" target="_blank">Mozilla Firefox ESR</a>. They are stable for approximately one year before receiving feature updates.')|f(latest=url('thunderbird.latest.all'), firefox_esr=url('firefox.organizations.faq')) }}
       </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 mt-0">
-        {{ _('To get help or ask questions about Thunderbird visit <a href="{0}" class="small-link text-blue" target="_blank">Thunderbird support</a>.')|f(url('support')) }}
+      <p class="font-lg tracking-wider leading-loose mb-10 mt-0 p-links-blue">
+        {{ _('To get help or ask questions about Thunderbird visit <a href="{0}" target="_blank">Thunderbird support</a>.')|f(url('support')) }}
       </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 mt-0">
-        {{ _('For information about deploying and configuring Thunderbird in business and enterprise environments, you can join the <a href="{0}" class="small-link text-blue" target="_blank">Enterprise mailing list</a>.')|f(url('thunderbird.enterprise')) }}
+      <p class="font-lg tracking-wider leading-loose mb-10 mt-0 p-links-blue">
+        {{ _('For information about deploying and configuring Thunderbird in business and enterprise environments, you can join the <a href="{0}" target="_blank">Enterprise mailing list</a>.')|f(url('thunderbird.enterprise')) }}
       </p>
     </aside>
   </section>
