--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -28,8 +28,8 @@
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           {{ _('<a href="%(support)s" class="header-link" target="_blank">Mozilla Support Website</a>')|format(support=url('support')) }}
         </h4>
-        <p class="mt-0 mb-6 flex-1">
-          {{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s" class="inline-link text-blue" target="_blank">specifically the Thunderbird page</a>. There you can search for articles, ask questions, and read tutorials.')|format(support=url('support')) }}
+        <p class="mt-0 mb-6 flex-1 p-links-blue">
+          {{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s" target="_blank">specifically the Thunderbird page</a>. There you can search for articles, ask questions, and read tutorials.')|format(support=url('support')) }}
         </p>
       </article>
 
@@ -46,8 +46,8 @@
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           {{ _('<a href="irc://irc.mozilla.org/thunderbird" class="header-link" target="_blank">Live Chat on IRC</a>') }}
         </h4>
-        <p class="mt-0 mb-6 flex-1">
-          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird" class="inline-link text-blue" target="_blank">#thunderbird channel on Mozilla’s IRC</a>. You can set up IRC in Thunderbird by following the <a href="https://support.mozilla.org/kb/instant-messaging-and-chat#w_configuring-chat" class="inline-link text-blue" target="_blank">instructions on SUMO</a>.') }}
+        <p class="mt-0 mb-6 flex-1 p-links-blue">
+          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird" target="_blank">#thunderbird channel on Mozilla’s IRC</a>. You can set up IRC in Thunderbird by following the <a href="https://support.mozilla.org/kb/instant-messaging-and-chat#w_configuring-chat" target="_blank">instructions on SUMO</a>.') }}
         </p>
       </article>
     </section>
@@ -58,11 +58,11 @@
       <aside class="flex flex-col w-1/2">
         <article class="flex flex-col w-full mb-6 pr-8">
           <h4 class="subheader-section">{{ _('Security') }}</h4>
-          <p class="font-md tracking-wide leading-loose mb-6 mt-0">
-            {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/" class="inline-link text-blue" target="_blank">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird" class="inline-link text-blue" target="_blank">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/" target="_blank">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird" target="_blank">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
           </p>
-          <p class="font-md tracking-wide leading-loose mb-6 mt-0">
-            {{ _('Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don’t get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net" class="inline-link text-blue">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don’t get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}
           </p>
         </article>
       </aside>
@@ -70,15 +70,15 @@
       <aside class="flex flex-col w-1/2">
         <article class="flex flex-col w-full mb-6 pl-8">
           <h4 class="subheader-section">{{ _('Partnerships') }}</h4>
-          <p class="font-md tracking-wide leading-loose mb-6 mt-0">
-            {{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird? Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net" class="inline-link text-blue">partnerships@thunderbird.net</a>.') }}
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird? Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}
           </p>
         </article>
 
         <article class="flex flex-col w-full pl-8">
           <h4 class="subheader-section">{{ _('Press Inquiries') }}</h4>
-          <p class="font-md tracking-wide leading-loose mb-6 mt-0">
-            {{ _('Are you a member of the press who would like to ask us a question about Thunderbird? You can reach our team at <a href="mailto:press@thunderbird.net" class="inline-link text-blue">press@thunderbird.net</a>.') }}
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('Are you a member of the press who would like to ask us a question about Thunderbird? You can reach our team at <a href="mailto:press@thunderbird.net">press@thunderbird.net</a>.') }}
           </p>
         </article>
       </aside>
@@ -86,21 +86,4 @@
   </section>
 
   {% include '_includes/site-prefooter.html' %}
-<!--
-  <section id="security">
-    <h2>{{ _('Security') }}</h2>
-    <div class="row">
-      <div class="col full">
-        <p>{{ _('For developers who would like to report security issues.') }}</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col full">
-        <section>
-          <p></p>
-        </section>
-      </div>
-    </div>
-  </section>
-</main> -->
 {% endblock %}
