--- a/website/features/index.html
+++ b/website/features/index.html
@@ -74,6 +74,7 @@
       </p>
     </aside>
 
+    <!-- # Leaving this out until we have a better chat story.
     <section class="flex w-full justify-center items-center mt-10">
       <aside class="flex flex-col w-1/2 max-w-md">
         <h3 class="subheader-section">{{ _('Multiple-channel chat')}}</h3>
@@ -86,7 +87,7 @@
           src="{{ static('img/thunderbird/features/chatnetworks.png') }}" alt="">
       </aside>
     </section>
-  </section>
+  </section> -->
 
   <section id="tabssearch" class="mt-20 mb-14 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
@@ -172,7 +173,7 @@
         src="{{ static('img/thunderbird/features/message-archive.png') }}" alt="">
       <h3 class="subheader-section">{{ _('Thunderbird Look & Feel')}}</h3>
       <p class="font-md tracking-wider leading-loose mb-8 mt-0">
-        {{ _('With Personas, lightweight "skins" allow you to change the look and feel of Thunderbird in an instant. Hundreds of skins are available from the latest movies, famous landmarks, and Japanese tattoos. You can also choose from several Themes that dress up all the different icons in Thunderbird.') }}
+        {{ _('Themes allow you to change the look of Thunderbird in an instant. Working on getting to inbox zero at night? Turn on the dark theme to make managing your email easier on the eyes. Thunderbird ships with both light and dark themes, and more are available as add-ons.') }}
       </p>
     </aside>
 
@@ -206,7 +207,7 @@
       <aside class="flex flex-col w-1/3 max-w-xs">
         <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg"
           src="{{ static('img/thunderbird/features/donottrack.png') }}" alt="">
-        <h3 class="subheader-section">{{ _('Robust Privacy and Do Not Track')}}</h3>
+        <h3 class="subheader-section">{{ _('Robust Privacy')}}</h3>
         <p class="font-md tracking-wider leading-loose mb-4 mt-0">
           {{ _('Thunderbird offers support for user privacy and remote image protection. To ensure a user’s privacy, Thunderbird automatically blocks remote images in email messages.') }}
         </p>
