Updated Whats New page.

--- a/website/thunderbird/68.0/whatsnew/index.html
+++ b/website/thunderbird/68.0/whatsnew/index.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block content %}
-  <section class="pt-20 pb-20 flex justify-between pl-20">
-    <aside class="flex flex-col flex-1 max-w-md ml-16 mr-16 pt-12">
+  <section class="pt-20 pb-20 flex justify-center bg-calendar">
+    <aside class="flex flex-col flex-1 max-w-6xl ml-16 mr-16">
+      <!-- Add half screenshot of dark theme -->
+      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/dark-theme.png') }}" alt="">
       <h3 class="header-section">
         <span>{{ svg('customize') }}</span>
         {{ _('Better Dark Theme')}}
@@ -25,19 +27,12 @@
       <p class="font-lg tracking-wider leading-loose mb-10">
         {{ _('The dark theme available in Thunderbird has been enhanced with a dark message thread pane as well as many other small improvements.') }}
       </p>
-      <aside class="ml-0 mr-0 self-start text-left text-blue font-semibold">
-        {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download'), section='body') }}
-      </aside>
-    </aside>
-
-    <aside class="flex flex-1">
-      {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Lightning Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
     </aside>
   </section>
 
   <section class="pb-10 flex max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside class="flex flex-col flex-1 max-w-lg">
-      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/chatnetworks.png') }}" alt="">
+      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/filelink.png') }}" alt="">
       <h3 class="header-section">
         <span>{{ svg('link') }}</span>
         {{ _('Filelink Improved')}}
@@ -51,7 +46,7 @@
     </aside>
 
     <aside class="flex flex-col flex-1 max-w-lg">
-      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/chatnetworks.png') }}" alt="">
+      <img class="w-full h-auto mb-10 max-w-sm self-center shadow-lg" src="{{ static('/media/img/thunderbird/features/preferences-in-tab.png') }}" alt="">
       <h3 class="header-section">
         <span>{{ svg('settings') }}</span>
         {{ _('Options/Preferences in a Tab')}}
@@ -80,6 +75,39 @@
     </aside>
   </section>
 
-  {% include '_includes/site-prefooter.html' %}
+    <section class="pt-20 pb-20 flex max-w-6xl mx-auto justify-between pl-8 pr-8 mb-10">
+    <aside class="flex flex-col flex-1 max-w-lg">
+      <h3 class="header-section">{{ _('Thunderbird is funded by users like you')}}</h3>
+      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
+        {{ _('Thunderbird is both free and freedom respecting, but we’re also completely funded by donations! Help us sustain the project and continue to improve.') }}
+      </p>
+      <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0" target="_blank">
+        <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
+      </a>
+    </aside>
+
+    <aside class="flex flex-col flex-1 max-w-lg">
+      <h3 class="header-section">{{ _('Join our Newsletter')}}</h3>
+      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
+        {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
+      </p>
+      <!-- Begin Mailchimp Signup Form -->
+      <form action="https://mozilla.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=9badb0cec2"
+            class="shadow flex items-center rounded-md self-start p-1"
+            method="post" id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            target="_blank">
+        <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
+          class="w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
+        <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
+        <!-- Prevent Bot signups -->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+            name="b_f8051cc8637cf3ff79661f382_9badb0cec2" tabindex="-1" value=""></div>
+      </form>
+      <!--End mc_embed_signup-->
+    </aside>
+  </section>
+
+  
 
 {% endblock %}
